--- a/src/dev/app/index.html
+++ b/src/dev/app/index.html
@@ -1,12 +1,14 @@
 
 <head>
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300'>
-	<link rel='stylesheet' href='css/theme.css'>
+
 	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
+	<link rel='stylesheet' href='css/pickmeup.css'>
+	<link rel='stylesheet' href='css/theme.css'>
 	<script src='https://code.jquery.com/jquery-3.2.1.js'></script>
 	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js'></script>
-
 	<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
+	<script src='js/pickmeup.js'></script>
 	<script src='spaceshipsPropeties.js'></script>
 	<script src='spaceships.js'></script>
 	<script src='app.js'></script>
@@ -25,7 +27,7 @@
 	</div>
 	<div class='row view bg-pluto' id='page-1'>
 		
-		<div ng-controller='searchMask' class='col-md-4 col-md-offset-4 br-pri-lgt'>
+		<div ng-controller='searchMask' class='col-md-4 col-md-offset-4 panel'>
 			<h1>Find a flight</h1>
 			Pick up location:
 			<select class='form-control'>
@@ -36,20 +38,27 @@
 				<option ng-repeat='location in locations' value='{{location}}'>{{location}}</option>
 			</select>
 
-			Landing location:
+			Price limit:
 			<select class='form-control'>
-				<option ng-repeat='n in listedArr(10,20)' value='{{n}}'>{{n}}</option>
+				<option ng-repeat='n in listedArr(4000,20000, 1000)' value='{{n}}'>{{n}} $</option>
 			</select>
 
-			<input value='2020'></input>
-			<select>
-			
-			</select>
-			<select>
-			
+			Class:
+			<select class='form-control' ng-model='query.class'>
+				<option ng-repeat='class in classes' value='{{class}}' >{{class}}</option>
 			</select>
 
-			<button class='btn btn-success' id='to-slide-2'> Continue </button>
+			Date range: 
+			<input class='form-control date-input' value='01-01-2014'>
+			<div class='pg-5'>
+				<input type='checkbox' id='disabled-persons' ng-model='query.disabled'> Facilities for the disabled
+			</div>
+			<div class='pg-5'>
+				<input type='checkbox' id='children' ng-model='query.model'> Facilities for people with children
+			</div>
+							
+			
+			<button class='btn btn-success mb-4' id='to-slide-2'> Continue </button>
 		</div>
 	</div>
 	<div class='row view' id='page-2'>
