Generator of mockup flights (untested)

--- a/src/dev/genSpaceShips.html
+++ b/src/dev/genSpaceShips.html
@@ -1,7 +1,7 @@
 <script src='utils.js'></script>
 <script src='app/spaceshipsPropeties.js'></script>
 <script src='spaceshipsGenerator.js'></script>
-
+<script src='flightsGenerator.js'></script>
 <body>
 
 </body>
